// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.extra: - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "areas.extra:",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "default",
      "size": undefined,
      "title": undefined,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bodyStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.bodyStyle: border: 5px solid blue",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  Object {
                    "border": "5px solid blue",
                  },
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": false,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.bordered: false",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.headerStyle: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.headerStyle: border: 5px solid blue",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "border": "5px solid blue",
                  },
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hoverable: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": true,
      "id": "properties.hoverable: true",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.inner: true",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": "inner",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.size: small",
      "size": "small",
      "title": <RenderHtml
        html="Card block small"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "properties.title",
      "size": undefined,
      "title": <RenderHtml
        html="Card block"
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with html in title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "bodyStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "bordered": undefined,
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "headStyle": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
      "hoverable": undefined,
      "id": "with html in title",
      "size": undefined,
      "title": <RenderHtml
        html=<div style="color:green">
  Card Title
</div>
        methods={
          Object {
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
                Array [
                  undefined,
                  Object {
                    "styleObjectOnly": true,
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"options\\":{\\"styleObjectOnly\\":true}}",
                },
              ],
            },
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
      />,
      "type": null,
    },
    Object {},
  ],
]
`;
